[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/Return_button-export.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Main/Report_screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Sprites/Report_button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Morning-export.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Settings/Settings_screen.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/Request_button.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Main/Request_screen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sprites/Setting_button-export.png" type="Texture" id=8]

[node name="Settings_screen" type="Control" groups=[
"update_font",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
Report = ExtResource( 2 )
Get_info = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node" parent="."]

[node name="Return" type="TextureButton" parent="Buttons"]
margin_left = 856.0
margin_top = 24.0
margin_right = 952.0
margin_bottom = 120.0
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Node" parent="."]

[node name="Sprite" type="Sprite" parent="Time"]
position = Vector2( 50.5, 50.5 )
texture = ExtResource( 4 )

[node name="Current_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "DAY 1: MORNING"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Period_time" type="Label" parent="Time"]
margin_left = 112.0
margin_top = 72.0
margin_right = 224.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "30S UNTIL NOON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_functions" type="Node" parent="."]

[node name="Report" type="TextureButton" parent="Main_functions"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -200.0
margin_top = 16.0
margin_right = 248.0
margin_bottom = 104.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request" type="TextureButton" parent="Main_functions"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = 120.0
margin_right = 80.0
margin_bottom = 164.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Report_label" type="Label" parent="Main_functions"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 480.0
margin_top = 56.0
margin_right = 529.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REPORT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_label" type="Label" parent="Main_functions"]
modulate = Color( 0.4, 0.4, 0.4, 1 )
margin_left = 352.0
margin_top = 136.0
margin_right = 656.0
margin_bottom = 168.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST INFORMATION"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress" type="Label" parent="."]
margin_left = 360.0
margin_top = 544.0
margin_right = 656.0
margin_bottom = 558.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "REQUEST PROGRESS:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Request_progress_2" type="Label" parent="Request_progress"]
margin_top = 24.0
margin_right = 296.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "0%"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Font_Button" type="TextureButton" parent="."]
margin_left = 168.0
margin_top = 256.0
margin_right = 296.0
margin_bottom = 298.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 184.0
margin_top = 280.0
margin_right = 344.0
margin_bottom = 294.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "HEVELTICA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 232.0
margin_top = 336.0
margin_right = 292.0
margin_bottom = 350.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "Font"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Font_Button3" type="TextureButton" parent="."]
margin_left = 656.0
margin_top = 256.0
margin_right = 784.0
margin_bottom = 298.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 672.0
margin_top = 280.0
margin_right = 832.0
margin_bottom = 294.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "OFF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 664.0
margin_top = 336.0
margin_right = 840.0
margin_bottom = 350.0
custom_colors/font_color = Color( 0.211765, 0.968627, 0.184314, 1 )
text = "Ambient sounds"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Buttons/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="Main_functions/Report" to="." method="_on_Report_pressed"]
[connection signal="pressed" from="Main_functions/Request" to="." method="_on_Request_pressed"]
[connection signal="pressed" from="Font_Button" to="." method="_on_Font_Button_pressed"]
[connection signal="pressed" from="Font_Button3" to="." method="_on_Font_Button3_pressed"]
